--- a/labs/CSS/app.css
+++ b/labs/CSS/app.css
@@ -2,7 +2,7 @@ body {
 	font-family: Verdana, sans-serif;
 	font-size: 100%;
 	line-height: 1.75em;
-	background-color: #ecf0f1;
+	background-color: #f5f6fa;
 }
 h1 {
 	font: bold 1.5em "Marko One", Georgia,serif;
