--- a/labs/CSS/exercise 13-8/menustyles.css
+++ b/labs/CSS/exercise 13-8/menustyles.css
@@ -3,18 +3,18 @@ body {
   font-size: 100%;
   line-height: 175%;
   margin: 0 15%;
-  background: #d2dc9d url(labs/CSS/images/blackgoose.png) no-repeat center 100px fixed;
+  background: #d2dc9d url(blackgoose.png) no-repeat center 100px fixed;
 
 }
 #header {
   margin-top: 0;
   padding: 3em 1em 2em 1em;
   text-align: center;
-  background-image: url(labs/CSS/images/purpledot.png) center top repeat-x;
+  background-image: url(purpledot.png) center top repeat-x;
   background: 
-   url(labs/CSS/images/purpledot.png) left top repeat-y,
-   url(labs/CSS/images/purpledot.png) right top repeat-y,
-   url(labs/CSS/images/gooseshadow.png) 90% bottom no-repeat;
+   url(purpledot.png) left top repeat-y,
+   url(purpledot.png) right top repeat-y,
+   url(gooseshadow.png) 90% bottom no-repeat;
   background-color: rgba(255,255,255,.5);
 
 }
