--- a/source/app.css
+++ b/source/app.css
@@ -174,6 +174,14 @@ h2 span:nth-child(6){
 	 font-size: 1em;
 
 }	
+p#copyright {
+  color:#ffffff; 
+  font-size: 10px;
+  text-align: center;
+  padding:  0 ;
+  margin-top: 500px;
+  border-top: 1px solid #333; 
+}
 @keyframes animate{
 	0%,80%{
 		color: #333;
