--- a/source/app.css
+++ b/source/app.css
@@ -74,7 +74,7 @@ h2 span:nth-child(6){
 
 }
 .menu{
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 60%;
 	transform: translateX(-10%) translateY(-10%);
@@ -102,16 +102,6 @@ h2 span:nth-child(6){
 .cool-link:hover::after{
 	width: 100%;
 	transition: width .3s;
-}
-.share-button{
-	color: #f1f1f1
-	display: flex;
-	height: 100vh;
-	width: 280px;
-	border-radius: 40px;
-	align-items: center;
-	justify-content: center;
-
 }
 .sci{
 	position: absolute;
@@ -174,6 +164,49 @@ h2 span:nth-child(6){
 	 font-size: 1em;
 
 }	
+.ticket{
+	 justify-content: center;
+	 align-items: center;
+	 background: #fff;
+     font-family: "Open Sans", sans-serif;
+     font-size: 14px;
+	 color:#000;
+	 min-height: 50vh;
+     margin: 50px auto;
+	 padding: 0px;
+	 width: 300px;
+     height: 450px;
+     position: relative;
+     
+}
+.ticket .purport  li{
+	list-style: none;
+	padding: 10px  90px  ;
+}
+.ticket .purport li a{
+	text-decoration: none;
+	background-color:#808e9b; 
+	color: #fff;
+	padding: 5px 15px;
+	border-radius: 10px;
+}
+.ticket .purport li a:hover{
+	color:#485460;
+	background-color: #fff;
+}
+.ticket .sliderText{
+	position: relative;
+	width: 100%;
+	height: 100px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: #7f8fa6;
+}
+.ticket .sliderText  h3{
+	 color: #fff;
+	 font-size: 1em;
+}
 p#copyright {
   color:#ffffff; 
   font-size: 10px;
