--- a/source/app.css
+++ b/source/app.css
@@ -73,35 +73,50 @@ h2 span:nth-child(6){
 	color:#778ca3 ;
 
 }
-.menu{
-	position: fixed;
+
+nav{
+	position:  absolute;
 	top: 0;
-	left: 60%;
+	left: 50%;
 	transform: translateX(-10%) translateY(-10%);
+	
 }
-.menu li{
-	display: inline-block;
-}
-.menu li a{
+nav a{
+	color: #fff;
 	text-decoration: none;
-	display:inline-block ;
-	font-family: Source Sans Pro;
-	font-weight: lighter;
-	font-size: 28px;
-	padding: 0 20px;
-	color: darkgrey;
+	text-align: center;
+	width: 120px;
+	padding: 1em 0;
+	display: inline-block;
+	font-weight: bold;
+	transition: all .4s ease-in-out;
+	
 }
-.cool-link::after{
-	content: ' ';
-	display: block;
-	width: 0;
-	height: 2px;
-	background: #fff;
-	transition: width .3s;
+.line{
+	width: 120px;
+	height: 3px;
+	background-color: #fff;
 }
-.cool-link:hover::after{
-	width: 100%;
-	transition: width .3s;
+nav a:nth-child(2):hover ~ .line{
+	transform: translate(125px);
+	transition: all .4s ease-in-out;
+	background-color:tomato;
+}
+
+nav a:nth-child(3):hover ~ .line{
+	transform: translate(250px);
+	transition: all .4s ease-in-out;
+	background-color: yellow;
+}
+nav a:nth-child(4):hover ~ .line{
+	transform: translate(375px);
+	transition: all .4s ease-in-out;
+	background-color: violet;
+}
+nav a:nth-child(5):hover ~ .line{
+	transform: translate(500px);
+	transition: all .4s ease-in-out;
+	background-color: skyblue;
 }
 .sci{
 	position: absolute;
@@ -214,6 +229,67 @@ p#copyright {
   padding:  0 ;
   margin-top: 500px;
   border-top: 1px solid #333; 
+}
+
+.middle{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
+ .btn{
+	position: relative;
+	display: block;
+	color: white;
+	font-size: 20px;
+	font-family: "montserrat";
+	text-decoration: none;
+	margin: 30px 0;
+	border: 2px solid #f5f6fa;
+	padding: 14px 60px;
+	transition: 0.8s ;
+	cursor: pointer;
+	overflow: hidden;
+}
+
+ .btn1, .btn2{
+	color: #f5f6fa;
+}
+ .btn3, .btn4{
+	color: #70a1ff;
+}
+ .btn1:hover, .btn2:hover{
+	color: #70a1ff;
+}
+.btn3:hover, .btn4:hover{
+	color: #f5f6fa;
+}
+.btn::before{
+	content: "";
+	position: absolute;
+	left: 0;
+	width: 100%;
+	height: 0%;
+	background:#f5f6fa ;
+	z-index: -1;
+	transition: 0.8s;
+}
+.btn1::before,.btn3::before{
+	top: 0;
+	border-radius: 0 0 50% 50%;
+}
+.btn2::before,.btn4::before{
+	bottom: 0;
+	border-radius: 50% 50% 0 0;
+}
+.btn3::before,.btn4::before{
+	height: 180%;
+}
+.btn1:hover::before,.btn2:hover::before{
+	height: 180%;
+}
+.btn3:hover::before,.btn4:hover::before{
+	height: 0%;
 }
 @keyframes animate{
 	0%,80%{
