Bo sung mini project

--- a/styles.css
+++ b/styles.css
@@ -429,4 +429,8 @@ footer p{
     .container{
         display: inline-block;
     }
+    .card .box .imgBx{
+         justify-content: center;
+        flex-wrap: wrap;
+    }
 }
